# griffin-mmm-demo

./: Griffin_EULA.docx  License.md  README.md  holidays.csv  holidays.xlsx  pyproject.toml
LEGAL/: Griffin_EULA.md  Griffin_EULA_v1.docx  Griffin_Subscription_Agreement.docx  Griffin_Subscription_Agreement.md
dashboard/: MMM_dashboard.pbix
demo/: budget_optimizer.py  demo_config.yml  demo_data.xlsx  demo_utils.py  demo_workbook.ipynb  enriched_demo.ipynb
demo/results/: ELPD.txt  all_decomp.csv  dashboard_input_data.csv  media_performance_cpa.csv  media_performance_effect.csv  model_config.json  model_summary.csv  output.txt  prophet_model.pkl
docs/: API.md  Configuration_Guide.md  ELPD_Explainer.md  Griffin_Quickstart.md  MODEL_COMPARISON.md  Output_Guide.md  config.md  results.md
src/base_driver/: __init__.py  config.py  driver.py  git.py  utils.py
src/base_driver/pyarmor_runtime_004832/: __init__.py  pyarmor_runtime.pyd
src/demo_utils/: widgets.py
src/mmm/: __init__.py
src/mmm/constants/: __init__.py  constants.py
src/mmm/data/: __init__.py  data_to_fit.py  input_data.py  serializable_scaler.py
src/mmm/describe/: __init__.py  baseline.py  body.py
src/mmm/model/: __init__.py  base.py  hsgp_kwargs.py  model.py  prior.py  saturation.py
src/mmm/optimize/: __init__.py  optimize.py
src/mmm/outlier/: __init__.py  outlier.py
src/mmm/parse/: __init__.py  csv.py  model_config.py
src/mmm/plot/: __init__.py  plot.py
src/mmm/preprocess/: __init__.py  preprocess.py
src/mmm/store/: __init__.py  dir.py  (+1 more)
utility/: demo_data_weekly.csv  holidays.xlsx
(+16 files in other folders)
