[tool.poetry]
name = "abc_mmm"
version = "1.0.0"
packages = [
    { include = "base_driver", from = "src" },
    { include = "mmm", from = "src" }
]
description = "Griffin is a unified platform for data scientists and marketers to easily train, evaluate, and interpret marketing mix models."
authors = ["Griffin Developers <hello@griffin-analytics.com>"]
license = "License.md"

[tool.poetry.dependencies]
python = "^3.10"
arviz = "^0.18.0"
GitPython = "^3.0"
jax = "^0.4"
jaxlib = "^0.4"  # "~0.4.26+cuda12.cudnn89" works in colab
matplotlib = "^3.4"
msgpack = "^1.0"
msgpack-numpy = "^0.4"
pandas = "^2.0"
plotly = "^5.10"
prophet = "^1.0"
pydantic = "^2.8"
pymc = "^5.10"
pytensor = "^2.15"
scipy = "^1.7"
openpyxl = "^3.0"
PyYAML = "^6.0"
scikit-learn = "^1.0"
seaborn = "^0.12"
statsmodels = "^0.14.0"
xarray = "^2024.3"

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core>=1.0.7"]
build-backend = "poetry.core.masonry.api"
